--- a/index.html
+++ b/index.html
@@ -1,37 +1,60 @@
-<button onclick="createPayment()">发起一笔测试支付 (0.01 Pi)</button>
-
 <script src="https://sdk.minepi.com/pi-sdk.js"></script>
 <script>
-  async function createPayment() {
-    try {
-      const paymentData = {
-        amount: 0.01,  // 测试金额，单位 Pi（最小 0.01）
-        memo: "测试支付 - 练手 App",  // 备注，必填
-        metadata: { test: "sandbox" }  // 可选元数据
-      };
+  // 等待 Pi SDK 加载完成
+  async function initPiSDK() {
+    if (window.Pi && Pi.init) {
+      try {
+        await Pi.init({ version: "2.0" });  // 初始化 SDK，指定版本
+        console.log('Pi SDK 初始化成功');
+        // 初始化成功后，才能调用 authenticate 或 createPayment
+        // 这里可以启用按钮，或直接测试
+      } catch (err) {
+        console.error('Pi SDK 初始化失败', err);
+        alert('SDK 初始化失败: ' + err.message);
+      }
+    } else {
+      // SDK 还没加载，等待几秒重试（或监听 load 事件）
+      setTimeout(initPiSDK, 500);
+    }
+  }
 
-      // 先 authenticate 获取 Pi 实例（如果没登录会弹窗）
-      const Pi = await Pi.authenticate(['payments'], onIncompletePaymentFound);
+  // 支付函数（在初始化后调用）
+  async function createPayment() {
+    if (!window.Pi || !Pi.createPayment) {
+      alert('Pi SDK 尚未初始化，请稍等或刷新页面');
+      return;
+    }
+
+    try {
+      // 先 authenticate（获取权限）
+      const scopes = ['username', 'payments'];
+      const auth = await Pi.authenticate(scopes, onIncompletePaymentFound);
 
       // 创建支付
+      const paymentData = {
+        amount: 0.01,
+        memo: "测试支付 - 练手 App",
+        metadata: { test: "sandbox" }
+      };
+
       const payment = await Pi.createPayment(paymentData, {
-        onReadyForServerApproval: function(paymentId) {
-          console.log('支付准备好服务器批准', paymentId);
-          // 这里可以发给你的后端批准（测试网可跳过或模拟）
-          // 实际生产需后端调用 Pi 的 approvePayment API
+        onReadyForServerApproval: (paymentId) => {
+          console.log('等待服务器批准', paymentId);
+          // 测试网可跳过或模拟批准
+          // 生产需后端调用 Pi 的 approvePayment
         },
-        onReadyForServerCompletion: function(paymentId, txid) {
+        onReadyForServerCompletion: (paymentId, txid) => {
           console.log('支付完成', txid);
-          alert('支付成功！交易 ID: ' + txid);
+          alert('支付成功！交易ID: ' + txid);
         },
-        onCancel: function() { alert('支付取消'); },
-        onError: function(error, errorData) { 
+        onCancel: () => alert('支付取消'),
+        onError: (error, errorData) => {
           console.error(error, errorData);
-          alert('支付失败: ' + error.message); 
+          alert('支付失败: ' + error.message);
         }
       });
 
-      console.log('创建支付成功', payment);
+      console.log('支付创建成功', payment);
     } catch (err) {
       console.error(err);
       alert('支付初始化失败: ' + err.message);
@@ -40,6 +63,11 @@
 
   function onIncompletePaymentFound(payment) {
     console.log('发现未完成支付', payment);
-    // 可选：处理未完成支付
   }
+
+  // 页面加载时初始化 SDK
+  window.addEventListener('load', initPiSDK);
 </script>
+
+<!-- 按钮 -->
+<button onclick="createPayment()">发起一笔测试支付 (0.01 Pi)</button>
