--- a/index.html
+++ b/index.html
@@ -1,51 +1,65 @@
-async function createPayment() {
-  try {
-    await Pi.init({ version: "2.0", sandbox: true });
+<!DOCTYPE html>
+<html lang="zh">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>我的 Pi App 练手</title>
+  <script src="https://sdk.minepi.com/pi-sdk.js"></script>
+</head>
+<body>
+  <h1>Hello Pi Network! 这是练手页面</h1>
+  <p>后面会加 Pi SDK 登录/支付测试</p >
 
-    const auth = await Pi.authenticate(['username', 'payments'], onIncompletePaymentFound);
+  <button onclick="createPayment()">发起一笔测试支付 (0.01 Pi)</button>
 
-    const paymentData = {
-      amount: 0.01,
-      memo: "测试支付 - 练手 App",
-      metadata: { test: "sandbox" }
-    };
+  <script>
+    async function createPayment() {
+      try {
+        await Pi.init({ version: "2.0", sandbox: true });
 
-    const payment = await Pi.createPayment(paymentData, {
-      onReadyForServerApproval: async (paymentId) => {
-        console.log('需要批准 paymentId:', paymentId);
+        const auth = await Pi.authenticate(['username', 'payments'], onIncompletePaymentFound);
 
-        // 调用你的 Vercel 后端批准
-        try {
-          const response = await fetch('/api/approve', {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({ paymentId })
-          });
+        const paymentData = {
+          amount: 0.01,
+          memo: "测试支付 - 练手 App",
+          metadata: { test: "sandbox" }
+        };
 
-          if (response.ok) {
-            console.log('后端批准成功');
-            // 可选：通知 Pi 完成（如果需要）
-          } else {
-            console.error('后端批准失败');
-          }
-        } catch (err) {
-          console.error('批准请求失败', err);
-        }
-      },
-      onReadyForServerCompletion: (paymentId, txid) => {
-        console.log('支付完成', txid);
-        alert('支付成功！交易 ID: ' + txid);
-      },
-      onCancel: () => alert('支付取消'),
-      onError: (error) => alert('支付失败: ' + error.message)
-    });
+        const payment = await Pi.createPayment(paymentData, {
+          onReadyForServerApproval: async (paymentId) => {
+            console.log('需要批准', paymentId);
+            try {
+              const response = await fetch('/api/approve', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ paymentId })
+              });
+              if (response.ok) {
+                console.log('后端批准成功');
+              } else {
+                console.error('后端批准失败');
+              }
+            } catch (err) {
+              console.error('批准请求失败', err);
+            }
+          },
+          onReadyForServerCompletion: (paymentId, txid) => {
+            console.log('支付完成', txid);
+            alert('支付成功！交易 ID: ' + txid);
+          },
+          onCancel: () => alert('支付取消'),
+          onError: (error) => alert('支付失败: ' + error.message)
+        });
 
-    console.log('支付创建成功', payment);
-  } catch (err) {
-    alert('支付初始化失败: ' + err.message);
-  }
-}
+        console.log('支付创建成功', payment);
+      } catch (err) {
+        alert('支付初始化失败: ' + err.message);
+      }
+    }
 
-function onIncompletePaymentFound(payment) {
-  console.log('发现未完成支付', payment);
-}
+    function onIncompletePaymentFound(payment) {
+      console.log('发现未完成支付', payment);
+    }
+  </script>
+</body>
+</html>
